infrastructure/configs/network-policies/components/allow-egress-to-restic-rest-server/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-restic-rest-server
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: backup
      ports:
        - port: 8000
          protocol: TCP
